--- a/app/views/layouts/_top_menu.html.erb
+++ b/app/views/layouts/_top_menu.html.erb
@@ -2,15 +2,15 @@
     <div id="left_menu">
         <ul>
             <li> <%= link_to "Issues", "#" %> </li>
-            <li> <%= link_to "Admin", "#" %> </li>
+            <li> <%= link_to "Admin", :users %> </li>
         </ul> 
     </div>
 
     <div id="right_menu">
         <ul>
             <li> <%= link_to "Login", "#" %></li>
-            <li> <%= link_to "About", "#" %></li>
-            <li> <%= link_to "Help", "#" %></li>
+            <li> <%= link_to "About", :about %></li>
+            <li> <%= link_to "Help", :help %></li>
         </ul>
     </div> 
 </div>
