--- a/app/views/static_content/about.html.erb
+++ b/app/views/static_content/about.html.erb
@@ -1,4 +1,6 @@
-<% provide(:title, 'About') %> 
+<% provide(:title, 'About') %>
+
+<p id="notice"><%= notice %></p>
 
 <h1>StaticContent#about</h1>
 <p>Find me in app/views/static_content/about.html.erb</p>
