--- a/app/views/layouts/_top_menu.html.erb
+++ b/app/views/layouts/_top_menu.html.erb
@@ -3,14 +3,14 @@
         <ul>
             <li> <%= link_to "Issues", "#" %> </li>
             <li> <%= link_to "Admin", :users %> </li>
-        </ul> 
+        </ul>
     </div>
 
     <div id="right_menu">
         <ul>
-            <li> <%= link_to "Login", "#" %></li>
+            <li> <%= login_logout %></li>
             <li> <%= link_to "About", :about %></li>
             <li> <%= link_to "Help", :help %></li>
         </ul>
-    </div> 
+    </div>
 </div>
