--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,2 +1,21 @@
-<h1>Session#new</h1>
-<p>Find me in app/views/session/new.html.erb</p>
+<div id="User_Create">
+    <% if flash[:alert] %>
+        <p id="notice"><%= flash[:alert] %></p>
+    <% end %>
+    <p id="notice">
+      <%= notice %>
+    </p>
+
+    <%= form_tag do %>
+      <fieldset>
+        <legend>Please log in</legend>
+        <%= label_tag :name, "User name" %>
+        <%= text_field_tag :name, params[:name] %>
+        <br>
+        <%= label_tag :password, "User password:" %>
+        <%= password_field_tag :password, params[:password] %>
+        <br>
+        <%= submit_tag 'Log In' %>
+      </fieldset>
+    <% end %>
+</div>
